-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.8
-
-
8
-
01e0371f9d (qt/tqtc-qtserialport/5.15) f3a306a30f (qt/qtserialport/dev) f3a306a30f (qt/tqtc-qtserialport/dev) b71e60fbed (qt/tqtc-qtserialport/6.2) 6d5b4b3d71 (qt/qtserialport/6.3) 0f5d0b4bb2 (qt/qtserialport/6.4) 6d5b4b3d71 (qt/tqtc-qtserialport/6.3)
-
Team A Foundation Sprint 58, Team A Foundation Sprint 59
With sufficiently high baud rates (> 115200) it appears that the synchronous functions will stall. This problem did not occur in early 5.12 versions.
This should be possible to reproduce with the blocking examples at https://doc.qt.io/qt-5.15/qtserialport-examples.html .
Reported occurring with MSVC 2017. No information if it is different when other compilers are used
- relates to
-
QTBUG-103822 QSerialPort::waitForReadyRead always returns false on older Windows systems
-
- Closed
-
-
QTBUG-93865 Fix regressions in QtSerialPort after porting to alertable I/O functions on Windows
-
- Closed
-
| For Gerrit Dashboard: QTBUG-101444 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 414175,1 | Windows: fix blocking read and write | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: ABANDONED | -1 | 0 |
| 414195,2 | Revert "Avoid possible symbol clashes on static builds on Windows" | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 414196,2 | Revert "Revert "Emit _q_notify only if there's no notification pending"" | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 414197,2 | Revert "Emit _q_notify only if there's no notification pending" | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 414198,5 | Revert "QSerialPort: Port to alertable I/O functions on Windows" | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 415021,3 | WIP: Windows: experiment with thread pools to enable foreign event loops | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: ABANDONED | 0 | 0 |
| 415578,2 | Windows: fix soft memory leak in synchronous mode | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 415817,3 | Windows: fix soft memory leak in synchronous mode | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
| 415840,2 | Windows: fix soft memory leak in synchronous mode | 6.4 | qt/qtserialport | Status: MERGED | +2 | 0 |
| 415841,2 | Windows: fix soft memory leak in synchronous mode | 6.3 | qt/qtserialport | Status: MERGED | +2 | 0 |
| 415843,2 | Windows: fix soft memory leak in synchronous mode | tqtc/lts-6.2 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 418692,2 | Windows: guard against closing the connection while processing incoming data | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
| 419103,2 | Windows: guard against closing the connection while processing incoming data | 6.4 | qt/qtserialport | Status: MERGED | +2 | 0 |
| 419104,2 | Windows: guard against closing the connection while processing incoming data | 6.3 | qt/qtserialport | Status: MERGED | +2 | 0 |
| 419110,2 | Windows: guard against closing the connection while processing incoming data | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
| 419111,2 | Windows: guard against closing the connection while processing incoming data | tqtc/lts-6.2 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |